# planner

./: .gitignore  .gitlab-ci.yml  NEWS  README  meson.build  meson_options.txt  meson_post_install.sh  planner.doap
data/: app.drey.Planner.desktop.in  app.drey.Planner.gresource.xml  app.drey.Planner.gschema.xml  app.drey.Planner.plugin.eds.gresource.xml  app.drey.Planner.plugin.sql.gresource.xml  meson.build  planner.convert
data/dtd/: meson.build
data/images/: meson.build
data/mime/: app.drey.Planner.xml.in  meson.build
data/sql/: app.drey.planner.plugins.sql.gschema.xml  meson.build
data/stylesheets/: meson.build  planner2html.xsl
data/ui/: add-predecessor.ui  calendar-dialog.ui  calendar-selector.ui  column-dialog.ui  day-type-dialog.ui  default-week-dialog.ui  eds.ui  group-dialog.ui  meson.build  new-calendar-dialog.ui  new-day-dialog.ui  new-phase-dialog.ui  new-property.ui  phase-dialog.ui  project-properties.ui  property-dialog.ui  resource-dialog.ui  resource-input-dialog.ui  resource-view.ui  sql-open-dialog.ui  sql-select-dialog.ui  task-dialog.ui  task-input-dialog.ui  working-time-dialog.ui
debian/: changelog  control  copyright  not-installed  planner-data.install  planner-data.lintian-overrides  planner.install  planner.lintian-overrides  planner.manpages  planner.mime  rules  watch
debian/upstream/: metadata
docs/: getting-started-hacking.xml  meson.build  mrp-class-diagram.dia  mrp-project-interaction-diagram.dia
docs/libplanner/: meson.build
docs/sql/: README.sql
docs/user-guide/: meson.build
docs/user-guide/C/: planner.xml
examples/: meson.build
installer/: planner-installer.nsi
libplanner/: meson.build  mrp-application.c  mrp-application.h  mrp-assignment.c  mrp-assignment.h  mrp-calendar.c  mrp-calendar.h  mrp-day.h  mrp-error.h  mrp-file-module.h  mrp-group.c  mrp-group.h  mrp-mpx.c  mrp-object.c  mrp-object.h  mrp-old-xml.c  mrp-old-xml.h  mrp-parser.c  mrp-parser.h  mrp-paths-gnome.c  mrp-paths.h  mrp-private.h  mrp-project.c  mrp-project.h  mrp-property.h  mrp-relation.c  mrp-relation.h  mrp-resource.c  mrp-resource.h  mrp-sql.c  mrp-sql.h  mrp-storage-module-factory.c  mrp-storage-module-factory.h  mrp-storage-module-xml.h  mrp-storage-module.c  mrp-storage-module.h  mrp-storage-mrproject.c  mrp-storage-mrproject.h  mrp-storage-sql.c  mrp-storage-sql.h  (+10 more)
po/: LINGUAS  POTFILES.in  POTFILES.skip  ca.po  cs.po  da.po  de.po  es.po  eu.po  fi.po  hr.po  hu.po  id.po  is.po  ka.po  lt.po  meson.build  nl.po  pl.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
src/: dummy-canvas-item.c  dummy-canvas-item.h  eel-canvas-rect.c  eel-canvas-rect.h  meson.build  planner-application.h  planner-assignment-model.h  planner-calendar-dialog.c  planner-calendar-dialog.h  planner-calendar-popover.c  planner-calendar-popover.h  planner-calendar-popover.ui  planner-calendar-selector.c  planner-calendar-selector.h  planner-canvas-line.c  planner-canvas-line.h  planner-cell-renderer-calendar.c  planner-cell-renderer-calendar.h  planner-cmd-manager.h  planner-column-dialog.c  planner-column-dialog.h  planner-conf-gconf.c  planner-conf.h  planner-day-type-dialog.c  planner-day-type-dialog.h  planner-default-week-dialog.c  planner-default-week-dialog.h  planner-eds-plugin.c  planner-format.c  planner-format.h  planner-gantt-background.c  planner-gantt-background.h  planner-gantt-chart.c  planner-gantt-chart.h  planner-gantt-header.c  planner-gantt-header.h  planner-gantt-model.c  planner-gantt-model.h  planner-gantt-print.c  planner-gantt-print.h  (+71 more)
src/libgnomecanvas/: gailcanvas.c  gailcanvasgroup.c  gailcanvasgroupfactory.c  gailcanvasitem.c  gailcanvasitemfactory.c  gailcanvastext.c  gailcanvastextfactory.c  gailcanvaswidget.c  gailcanvaswidgetfactory.c  gnome-canvas-line.c  gnome-canvas-line.h  gnome-canvas-pixbuf.c  gnome-canvas-rect.c  gnome-canvas-text.c  gnome-canvas-util.c  gnome-canvas-util.h  gnome-canvas-widget.c  gnome-canvas.c  libgnomecanvas.h  meson.build
tests/: calendar-test.c  meson.build  scheduler-test.c  task-test.c  time-test.c
tests/libplanner/: meson.build  mrptime.c
