images_data = [
  'tasks.png',
  'gantt.png',
  'resources.png',
  'resources_usage.png',
  '24_insert_task.png',
  '24_remove_task.png',
  '24_unlink_task.png',
  '24_link_task.png',
  '24_indent_task.png',
  '24_unindent_task.png',
  '24_insert_resource.png',
  '24_remove_resource.png',
  '24_edit_resource.png',
  '24_groups.png',
  '24_task_down.png',
  '24_task_up.png',
  'gnome-planner.png',
]
install_data(images_data,
  install_dir: planner_pkgdatadir / 'images'
)

install_data('gnome-mime-application-x-planner.png',
  install_dir: planner_datadir / 'icons' / 'hicolor' / '48x48' / 'mimetypes'
)

install_data('gnome-planner.png',
  install_dir: planner_datadir / 'icons' / 'hicolor' / '48x48' / 'apps'
)

install_data('gnome-planner.svg',
  install_dir: planner_datadir / 'icons' / 'hicolor' / 'scalable' / 'apps'
)
