stylesheets_data = [
  'planner2html.xsl',
  'html1_css.xsl',
  'html1_css_ie.xsl',
  'html1_css_ie7.xsl',
  'html1_gantt.xsl',
  'html1_resources.xsl',
  'html1_tasks.xsl',
  'msp2planner.xsl',
  'localizable.xml',
]
install_data(stylesheets_data,
  install_dir: planner_pkgdatadir / 'stylesheets'
)
